--- a/src/main/resources/templates/adminAltaAire.hbs
+++ b/src/main/resources/templates/adminAltaAire.hbs
@@ -87,14 +87,11 @@
             <br>
             <br>
             <div class="mdl-textfield mdl-js-textfield" >
-                <input class="mdl-textfield__input" style="margin-bottom:50px;" type="text" id="NOMBRE" name="NOMBRE" />
-                <label class="mdl-textfield__label"  style="margin-bottom:50px;" for="NOMBRE">NOMBRE </label>
+                <input class="mdl-textfield__input" placeholder=" NOMBRE" style="margin-bottom:50px;" type="text" id="NOMBRE" name="NOMBRE" />
 
-                <input class="mdl-textfield__input"  style="margin-top:25px;margin-bottom: 25px;" type="text" id="FRIGORIAS" name="FRIGORIAS" />
-                <label class="mdl-textfield__label"  style="margin-top:25px;margin-bottom: 25px;"  for="FRIGORIAS">FRIGORIAS </label>
+                <input class="mdl-textfield__input"  placeholder=" FRIGORIAS" style="margin-bottom:30px";type="text" id="FRIGORIAS" name="FRIGORIAS" />
 
-                <input class="mdl-textfield__input"  type="text" id="ID" name="ID" />
-                <label class="mdl-textfield__label"  for="ID">ID CLIENTE </label>        
+                <input class="mdl-textfield__input" placeholder=" ID" type="text" id="ID" name="ID" />
 
             <button type="submit" style="display: inline-block;margin-left:100% " class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" value="CONSUMODISPOSITIVO ">ENVIAR</button>
             </div>
