--- a/src/main/resources/templates/adminReportes.hbs
+++ b/src/main/resources/templates/adminReportes.hbs
@@ -28,8 +28,8 @@
                 <ul>
                     <div class="link">
                         <li><a href="/admin"> Inicio</a></li>
-                        <li><a href="/adminAlta"> Alta dispositivo</a></li>
-                        <li><a href="/adminReportes" style="font-size:15px;"> Ver Reportes</a></li>
+                        <li><a href="/admin/altaDispositivo"> Alta dispositivo</a></li>
+                        <li><a href="/admin/reportes" style="font-size:15px;"> Ver Reportes</a></li>
 
                     </div>
 
@@ -65,7 +65,7 @@
     <div class="content row">
         <div class="averages">
 
-            <form method="POST" action="/usuario">
+            <form method="POST" action="/admin/reportes">
                 <br>
                 <br>
                 <div class="mdl-textfield mdl-js-textfield">
